<Cell/> Layout - Fix Firefox bug on grid text overflow (#4906)
* Fix: Firefox bug on grid text overflow

* Fix visual tests replacing min-width with max-width

--- a/src/Layout/Cell/styles.scss
+++ b/src/Layout/Cell/styles.scss
@@ -2,7 +2,12 @@
   align-self: center;
 }
 
-@media all and (-ms-high-contrast:none) {
+.root {
+  // https://bugzilla.mozilla.org/show_bug.cgi?id=1528030
+  max-width: 100%;
+}
+
+@media all and (-ms-high-contrast: none) {
   .root {
     margin: 10px 10px 0 10px;
     flex: 1 0 auto;
